--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.basgeekball:awesome-validation:4.3'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    //DEPENDENCIAS DE VOLLEY
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 }
 apply plugin: 'com.google.gms.google-services'
